--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <p class="suggest__title">Suggested</p>
             <!--  -->
             <div class="grid-container">
-                <input form="form" onclick="recomendHandler(prop = 'Vilkhivtsi')" type="submit" value="Vilkhivtsi">
-                <input form="form" onclick="recomendHandler(prop = 'Kyiv')" type="submit" value="Kyiv">
-                <input form="form" onclick="recomendHandler(prop = 'Paris')" type="submit" value="Paris">
-                <input form="form" onclick="recomendHandler(prop = 'Marmaris')" type="submit" value="Marmaris">
-                <input form="form" onclick="recomendHandler(prop = 'Frankfurt')" type="submit" value="Frankfurt">
-                <input form="form" onclick="recomendHandler(prop = 'Varna')" type="submit" value="Varna">
-                <input form="form" onclick="recomendHandler(prop = 'Uzhhorod')" type="submit" value="Uzhhorod">
-                <input form="form" onclick="recomendHandler(prop = 'Lapland')" type="submit" value="Lapland">
+                <input class="suggest-form" form="form" type="submit" value="Vilkhivtsi">
+                <input class="suggest-form" form="form" type="submit" value="Kyiv">
+                <input class="suggest-form" form="form" type="submit" value="Paris">
+                <input class="suggest-form" form="form" type="submit" value="Marmaris">
+                <input class="suggest-form" form="form" type="submit" value="Frankfurt">
+                <input class="suggest-form" form="form" type="submit" value="Varna">
+                <input class="suggest-form" form="form" type="submit" value="Uzhhorod">
+                <input class="suggest-form" form="form" type="submit" value="Lapland">
             </div>
             <!--  -->
         </div>
@@ -69,7 +69,7 @@
         <p>© cloud 2024</p>
         <p>Made by <a class="creator" href="https://stepandordiai.netlify.app/" target="_blank">Stepan Dordiai</a></p>
     </footer>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
