--- a/index.html
+++ b/index.html
@@ -43,33 +43,66 @@
             <!--  -->
         </div>
         <div class="weather-container none">
-            <div class="weather">
-                <div class="weather__temp">--°c</div>
-                <div class="weather__city">-</div>
-                <div class="weather__type">-</div>
-                <div class="details">
-                    <div class="details__humidity">
-                        <i class="fa-solid fa-droplet"></i>
-                        <div class="humidity">
-                            <div id="humidity">--%</div>
-                            <div class="humidity__title">Humidity</div>
+            <div class="weather-container-data">
+                <div class="weather">
+                    <img class="weather-img" src="" alt="">
+                    <div class="weather__temp">--°c</div>
+                    <div class="weather__city">-</div>
+                    <div class="weather__type">-</div>
+                    <div class="details">
+                        <div class="details__humidity">
+                            <i class="fa-solid fa-droplet"></i>
+                            <div class="humidity">
+                                <div id="humidity">--%</div>
+                                <div class="humidity__title">Humidity</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="details__speed">
-                        <i class="fa-solid fa-wind"></i>
-                        <div class="speed">
-                            <div id="speed">--.-- km/h</div>
-                            <div class="speed__title">Wind speed</div>
+                        <div class="details__speed">
+                            <i class="fa-solid fa-wind"></i>
+                            <div class="speed">
+                                <div id="speed">--.-- km/h</div>
+                                <div class="speed__title">Wind speed</div>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="twenty4-hours-weather">
+
+                </div>
             </div>
-            <img class="weather-img" src="" alt="">
+            <div class="five-days-weather">
+                <div class="days-container first-day-container">
+                    <p>Today</p>
+                    <p>Cloudy</p>
+                    <p>7&deg;</p>
+                </div>
+                <div class="days-container second-day-container">
+                    <p>Today</p>
+                    <p>Cloudy</p>
+                    <p>7&deg;</p>
+                </div>
+                <div class="days-container third-day-container">
+                    <p>Today</p>
+                    <p>Cloudy</p>
+                    <p>7&deg;</p>
+                </div>
+                <div class="days-container fourth-day-container">
+                    <p>Today</p>
+                    <p>Cloudy</p>
+                    <p>7&deg;</p>
+                </div>
+                <div class="days-container fifth-day-container">
+                    <p>Today</p>
+                    <p>Cloudy</p>
+                    <p>7&deg;</p>
+                </div>
+            </div>
+
         </div>
     </div>
     <footer class="footer">
-        <p>© 2024 cloud</p>
-        <p>Made by <a class="creator" href="https://stepandordiai.netlify.app/" target="_blank">Stepan Dordiai</a></p>
+        <p class="copyright">© 2024 cloud</p>
+        <p class="creator">Made by <a href="https://stepandordiai.netlify.app/" target="_blank">Stepan Dordiai</a></p>
     </footer>
     <script type="module" src="js/main.js"></script>
 </body>
