--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <a class="header__logo" href="index.html">
-            <img src="./img/logo/logo-cloud.svg" alt="">
+            <img src="./img/logo/logo.svg" alt="">
             <p>cloud.</p>
         </a>
         <div class="header__day">--/--/--</div>
@@ -86,7 +86,7 @@
     </div>
     <footer class="footer">
         <p class="copyright">© 2024 cloud.</p>
-        <p class="creator">Made with <img src="./img/logo/logo-cloud.svg" alt=""> by <a
+        <p class="creator">Made with <img src="./img/logo/logo.svg" alt=""> by <a
                 href="https://stepandordiai.netlify.app/" target="_blank">Stepan Dordiai</a></p>
     </footer>
     <script type="module" src="js/main.js"></script>
