--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <input class="suggest-form" form="form" type="submit" value="London">
                 <input class="suggest-form" form="form" type="submit" value="Cologne">
                 <input class="suggest-form" form="form" type="submit" value="Abu Dhabi">
+                <input class="suggest-form" form="form" type="submit" value="Prague">
             </div>
         </div>
         <div class="weather-container none">
