--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="Weather daily, weather hourly, date">
     <title>cloud.</title>
     <link rel="stylesheet" href="./scss/main.css">
-    <!-- FONT ICONS -->
+    <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/4b11705643.js" crossorigin="anonymous"></script>
-    <!-- FAVICONS -->
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./img/favicons/logo-svg-260-cloud.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/logo-png-180-cloud.png">
 </head>
