--- a/index.html
+++ b/index.html
@@ -86,9 +86,12 @@
         </div>
     </div>
     <footer class="footer">
-        <p class="copyright">© 2024 cloud.</p>
-        <p class="creator">Made with <img src="./img/logo/logo.svg" alt=""> by <a
-                href="https://stepandordiai.netlify.app/" target="_blank">Stepan Dordiai</a></p>
+        <p class="creator">Made with 🤍 by <a href="https://stepandordiai.netlify.app/" target="_blank">Stepan
+                Dordiai</a></p>
+        <div>
+            <p class="copyright">© 2024 cloud.</p>
+            <p>All rights reserved.</p>
+        </div>
     </footer>
     <script type="module" src="js/main.js"></script>
 </body>
