--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <footer class="footer">
-        <p class="creator">Made with 🤍 by <a href="https://stepandordiai.netlify.app/" target="_blank">Stepan
+        <p class="creator">Made with love by <a href="https://stepandordiai.netlify.app/" target="_blank">Stepan
                 Dordiai</a></p>
         <div>
             <p class="copyright">© 2024 cloud.</p>
